# Ethernet_ESP32

./: .gitignore  CMakeLists.txt  README.md
components/ethernet_init/: CMakeLists.txt  ethernet_init.c
main/: CMakeLists.txt  ethernet_setup.c  ethernet_setup.h  main.c  motor_control.c  motor_control.h
main/include/: bldc_controller.h  bldc_pid.h  ethernet_setup.h  tcp_com.h
main/src/: bldc_controller.c  bldc_pid.c  ethernet_setup.c  main.c  tcp_com.c
