idf_component_register(
    SRCS
        "src/main.c"
        "src/ethernet_setup.c"
        "src/tcp_com.c"
        "src/bldc_controller.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        json
        ethernet_init
        esp_eth
        esp_netif
        esp_event
        freertos
        lwip
)
